# advent-of-code-2023

./: Cargo.toml  README.md  bench-go.sh  benchmarks.txt  day-01.bench.txt  day-02.bench.txt  day-04.bench.txt  go-benchmarks.md  makefile  rust-benchmarks.md
2023/aoc2023day1/: Cargo.toml
2023/aoc2023day1/benches/: benchmarks.rs
2023/aoc2023day1/src/: main.rs  part1.rs  part2.rs
2023/aoc2023day2/: Cargo.toml
2023/aoc2023day2/benches/: benchmarks.rs
2023/aoc2023day2/src/: main.rs  part1.rs  part2.rs
2023/aoc2023day3/: Cargo.toml
2023/aoc2023day3/benches/: benchmarks.rs
2023/aoc2023day3/src/: main.rs  part1.rs  part2.rs
2023/aoc2023day4/: Cargo.toml
2023/aoc2023day4/benches/: benchmarks.rs
2023/aoc2023day4/src/: main.rs  part1.rs
2023/day-01/: Cargo.toml
2023/day-01/benches/: benchmarks.rs
2023/day-01/src/: part1.rs
2023/day-02/: Cargo.toml
2023/day-02/benches/: benchmarks.rs
2023/day-02/src/: part1.rs  (+1 more)
2023/day-03/: Cargo.toml
2023/day-04/: Cargo.toml
2024/: 0.bench.txt
2024/aoc2024day0/: Cargo.toml  input1.txt
2024/aoc2024day1/: Cargo.toml  bench.txt  benchstat.md  go.mod  main.go  makefile
day-01/: Cargo.toml  README.md  input2.txt
day-01/src/: part1.rs  part2.rs
day-02/: Cargo.toml  README.md
day-02/src/: part1.rs  part2.rs
day-03/: Cargo.toml
day-03/src/: part1.rs  part2.rs
day-04/: Cargo.toml
day-04/src/: part1.rs  part2.rs
day-05/: Cargo.toml
day-05/src/: part1.rs
go-day/: go.mod  main.go
go-day/bootstrap/: go.mod  main.go  part1.go  part1_test.go  part2.go  part2_test.go  util.go
rust-day/: Cargo.toml
rust-day/benches/: benchmarks.rs
rust-day/src/: main.rs
(+18 files in other folders)
