[workspace]
resolver = "2"

members = ["2023/day-*","2024/*"]
default-members = ["2023/day-*","2024/*"]

[workspace.dependencies]
glam = "0.29"
itertools = "0.13"
nom = "7.1.3"
petgraph = "0.6"
rayon = "1.10"
tracing = "0.1"
tracing-subscriber = "0.3"
rstest = "0.23"
rstest_reuse = "0.7"
divan = "0.1"
tracing-tracy = "0.11"
tracy-client = "0.17"
tracy-client-sys = "0.24"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
nom_locate = { version = "4.2.0" }
