[package]
name = "aoc2023day1"
version = "0.1.0"
edition = "2021"
default-run = "aoc2023day1"

[dependencies]
itertools = { workspace = true }
nom = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "bench-aoc2023day1"
path = "benches/benchmarks.rs"
harness = false

