[package]
name = "aoc2023day2"
version = "0.1.0"
edition = "2021"
default-run = "aoc2023day2"

[dependencies]
itertools = { workspace = true }
nom = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "bench-aoc2023day2"
path = "benches/benchmarks.rs"
harness = false

